--- a/package.json
+++ b/package.json
@@ -7,30 +7,26 @@
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "stylelint": "stylelint \"**/*.scss\" --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "nanoid": "^5.0.7",
     "next": "14.2.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "classnames": "^2.5.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "sass": "^1.77.6",
-    "stylelint": "^16.6.1",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5"
   }
 }
